fixing flow and inscriptions

--- a/tournament-web-app/src/app/app.component.html
+++ b/tournament-web-app/src/app/app.component.html
@@ -1,8 +1,8 @@
 
 <mat-toolbar color="accent">
-    <a [routerLink]="[bussiness.home]"  mat-icon-button>
+    <button (click)="home()" mat-icon-button>
         <mat-icon>home</mat-icon>
-    </a>             
+    </button>             
 
     <span class="spacer"></span> 
 
