--- a/tournament-web-app/src/app/participant-tournament/participant-tournament.component.css
+++ b/tournament-web-app/src/app/participant-tournament/participant-tournament.component.css
@@ -22,3 +22,9 @@ performance_label{
     font-size: large;
     margin: 5px;
 }
+.mat-icon{
+    font-size:48px !important;
+    width:48px;                
+    height:48px;              
+
+}
