--- a/tournament-web-app/src/app/home/home.component.html
+++ b/tournament-web-app/src/app/home/home.component.html
@@ -1,20 +1,26 @@
 
+<mat-grid-list cols="4" >
+    <mat-grid-tile colspan="3">
+        <div class="header-container">
+            <h1>MisCompetencias</h1>
+            <p>Site especializado en competencias de apreciacion</p>            
+        </div>
+        
+    </mat-grid-tile>
+    <mat-grid-tile colspan="1">
+        <img mat-card-lg-image src="/assets/medals_640.jpg" alt="miscompetencias">
+    </mat-grid-tile>
+</mat-grid-list>
+
 <mat-card class="example-card">
     <mat-card-header>
         <mat-card-title-group>
-            <mat-card-title>MisCompetencias</mat-card-title>
-            <mat-card-subtitle>Site especializado en competencias de apreciacion</mat-card-subtitle>
-            <img mat-card-lg-image src="/assets/medals_640.jpg" alt="miscompetencias">
+            <mat-card-title>Que puedes realizar en MisCompetencias.com</mat-card-title>
         </mat-card-title-group>
     </mat-card-header>
     
     <mat-card-content>
-     
-        <p>
-            En <b>MIS COMPETENCIAS.COM</b>, nos enorgullece proporcionar una plataforma integral para la automatizacion de evaluaciónes de concursos, competencias y torneos. Nuestra finalidad es facilitar la organización y ejecución de eventos de manera eficiente, asegurando una experiencia sin complicaciones tanto para los organizadores como para los participantes
-        </p>
-
-        <h3>Que puedes realizar en MisCompetencias.com:</h3>
+        <p>nos enorgullece proporcionar una plataforma integral para la automatizacion de evaluaciónes de concursos, competencias y torneos. Nuestra finalidad es facilitar la organización y ejecución de eventos de manera eficiente, asegurando una experiencia sin complicaciones tanto para los organizadores como para los participantes</p>
         <mat-list role="list">
             <mat-list-item role="listitem">Crear mis propios eventos y premios.</mat-list-item>
             <mat-list-item role="listitem">Crear un link de invitacion para mis participantes.</mat-list-item>
@@ -25,14 +31,10 @@
         </mat-list>
     </mat-card-content>
 
-    <p>En <b>MISCOMPETENCIAS.COM</b>, estamos dedicados a hacer que cada evento sea un éxito. Únete a nosotros en nuestro espacio para transformar la forma en que se planifican y evalúan concursos, competencias y torneos en todo el mundo.</p>
-
-    <p>
-        ¡Descubre el poder de MISCOMPETENCIAS.COM hoy mismo!        
-    </p>
     <mat-card-actions>
         <a routerLink="/tournamentAdmin">
-            <button mat-raised-button color="primary">Iniciar</button>
+            <button mat-raised-button color="primary">Ingresar</button>
         </a> 
     </mat-card-actions>
 </mat-card>
+<script src="https://www.google.com/recaptcha/api.js?render=6Lep2dkpAAAAAHSgbegNP9Vg87VzHYSgrZ3NU6dY"></script>
