--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
@@ -65,7 +65,7 @@
         <mat-tab label="podium">
             <app-tournament-edit-podium [tournamentId]="tournamentId" [tournament]="tournament"></app-tournament-edit-podium>
         </mat-tab>
-        <mat-tab label="Editar">
+        <mat-tab label="Configuracion">
             <mat-accordion>
                 <mat-expansion-panel hideToggle>
                   <mat-expansion-panel-header>
