--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
@@ -76,3 +76,16 @@ p{
 .label{
     margin:5px;
 }
+.request-grid{
+    padding: 2em;
+    width:90%;
+    margin-left:auto;
+    margin-right: auto;
+}
+.request-grid-title{
+    font-weight:lighter;
+    border-bottom: 1px solid lightblue;
+}
+mat-tab-group{
+    margin-top: 2em;
+}
