--- a/tournament-web-app/src/app/participant-tournament/participant-tournament.component.css
+++ b/tournament-web-app/src/app/participant-tournament/participant-tournament.component.css
@@ -1,30 +1,15 @@
+mat-grid-list{
+    margin-left: 1em;
+}
 mat-divider{
     margin:1em;
 }
 
-performance_label{
-    margin: 1em;
+.performance_label{
+    text-align: left;
+    width:100%;
 }
-
-.status{
-    color:black;
-    font-size: large;
-    margin: 5px;
-}
-
-.status_rejected{
-    color:red;
-    font-size: large;
-    margin: 5px;
-}
-.status_canceled{
-    color:red;
-    font-size: large;
-    margin: 5px;
-}
-.mat-icon{
-    font-size:48px !important;
-    width:48px;                
-    height:48px;              
-
+.performance_status{
+    text-align: left;
+    width:100%;
 }
