nexr button to blue

--- a/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
+++ b/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
@@ -72,7 +72,7 @@
                         </mat-grid-tile>                        
                         <mat-grid-tile>
                             @if( isAdmin ){
-                                <button mat-icon-button (click)="onAddEvaluationGrade(e.id,j.id!)"><mat-icon>playlist_add</mat-icon></button>
+                                <button mat-raised-button color="primary" (click)="onAddEvaluationGrade(e.id,j.id!)"><mat-icon>playlist_add</mat-icon>Addicionar examen</button>
                             }
                         </mat-grid-tile>
 
