--- a/tournament-web-app/src/app/participant-tournament/participant-tournament.component.html
+++ b/tournament-web-app/src/app/participant-tournament/participant-tournament.component.html
@@ -1,7 +1,7 @@
 @if( tournament ){
     <span>
         <div>
-            <h2>{{ tournament.label }}</h2>
+            <h2>Invitacion a {{ tournament.label }}</h2>
             <div class="tournament-detail">
                 <h3>Fecha:{{ dateSrv.getDate( tournament.eventDate) | date: 'dd/MM/yyyy'}}</h3>
                 <h4>Hora:{{tournament.eventTime}}</h4>                
